# short_gui

./: README.md  components.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  form.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
